devops-TP18/referencias-tp/trabajo-17/trabajo-12-c/manifests/tp12c-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp12c-ingress
  namespace: devops-portfolio
spec:
  ingressClassName: nginx
  rules:
    - host: devops-portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tp12c-backend-service
                port:
                  number: 5000
